# indus-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  00-OVERVIEW.md  01-SESSION-PLAN.md  02-ARCHITECTURE.md  03-IMPLEMENTATION-GUIDE.md  04-TOOL-SYSTEM.md  05-PACKAGING-DEPLOYMENT.md  06-QUICK-REFERENCE.md  =0.35.0  =0.40.0  AGENCY_CODE_COMPARISON.md  AGENCY_SWARM_COMPARISON.md  AGENCY_SWARM_IMPLEMENTATION_PLAN.md  AGENCY_SWARM_PATTERNS.md  AGENTS_UNIFIED_CONFIG_SUMMARY.md  AGENT_ARCHITECTURE_VISUAL.md  AGENT_CONNECTION_ANSWER.md  AGENT_CONNECTION_CODE_TRACE.md  AGENT_CONNECTION_SUMMARY.md  AGENT_GLM_CONNECTION_ANALYSIS.md  AGENT_ISOLATION_ARCHITECTURE.md  AGENT_README.md  AGENT_UI_UPDATE_SUMMARY.md  CHANGELOG.md  CLI_COMPLETE.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_README.md  COMPLETE_PROJECT_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CUSTOM_TOOLS_FEATURE_COMPLETE.md  CUSTOM_TOOLS_README.md  DEEPWIKI_MCP_GUIDE.md  DEPLOYMENT.md  DEVIN_MCP_GUIDE.md  EXAMPLE_AGENCY_IMPROVED_UPDATE.md  FINAL_PROJECT_SUMMARY.md  FOLDER_CREATION_FIXED.md  (+135 more)
.claude/: settings.local.json  ss
Agency-Code/: .gitignore  LICENSE  README.md  agency.py
activity-tracker-agent/: README.md  activity_tracker_data_fetcher.ts  activity_tracking_analysis_comprehensive_48d7bfe6-39ce-4b4f-a442-001671f035c9.md  agent.py  analyze_data.js  generate_analysis.js  prompt.md  run_example.py  store_activity_data.ts
ai-agent-builder/: ai-agent-builder-spec.md  plan.md  risk-report.md
ai-agent-builder-project/: critic_report.md  plan.md
ai-chatbot-app/: README.md  index.html  styles.css
ai-cli-webapp/: index.html  package.json
ai-ipo-company/: contact.html  index.html
ai-machine/: index.html
ai-mobile-company/: README.md  about.html  index.html  products.html  services.html
ai-mobile-website/: README.md  about.html  contact.html  index.html  pricing.html  products.html  services.html
ai-saas/: README.md  about.html  blog.html  contact.html
ai-smart-band/: README.md  index.html
ai-startup/: COLOR_IMPROVEMENTS.md  README.md  about.html  features.html  index.html
ai_agency_website/: styles.css
bike-shop/: cart.html  index.html
calculator_app/: index.html
calculator_web_app/: app.js  styles.css
cloudflow-website/: README.md  generate_blog_pages.py  generate_customer_pages.py  index.html
cycling-website/: README.md  contact.html  index.html
docs/: AGENCY_SWARM_RESEARCH.md  COMPARISON.md  INTEGRATION_PLAN.md  PHASE1_FOUNDATION.md  PHASE2_TOOLS.md  PHASE3_AGENTS.md  PHASE4_FEATURES.md
example_agency_improved_anthropic_prompts/: coder_instructions.md  planner_instructions.md
example_agency_improved_groq_prompts/: planner_instructions.md
example_agents/: example_agency.py  example_agency_improved_anthropic-mini-max.py  example_agency_improved_anthropic.py  example_agency_improved_google.py  example_agency_improved_groq.py  example_agency_improved_mistral.py  example_agency_improved_ollama.py  example_agency_pypi.py  example_mcp_agent.py  mcp.example.json
examples/: basic_usage.py  example_subagent_agency.py  memory_example.py
game_website/: app.js  index.html  styles.css
glm-website/: README.md  documentation.html  index.html  pricing.html
harekrishna-agarbati-shop/: cart.html  contact.html
harekrishna-mall/: contact.html  events.html  index.html  stores.html  validate.js
health-startup-website/: about.html  contact.html  index.html  services.html
list_web_app/: app.js
oppo-ai-site/: 404.html  contact.html  products.html
oppo-ai-website/: package.json
python_agent/: agent.py  main.py
realestate-site/: 404.html  about.html  index.html  property.html  robots.txt  sitemap.xml
samsung-website/: careers.html  index.html  support.html
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_cli.py  test_config.py  test_integration.py  test_memory.py  test_orchestrator.py  test_tools.py
todo-app/: index.html
todo-app-simple/: QUICKSTART.md  SUMMARY.md  app.js
ui-agency-website/: index.html
vivo-ai-website/: 404.html  EXECUTION_REPORT.md  PROJECT_SUMMARY.md  README.md  about.html  careers.html  privacy.html  products.html  sitemap.xml  (+1 more)
(+592 files in other folders)
